# langchain-naver

./: .gitignore  README.md
.github/scripts/: check_diff.py
.github/workflows/: _release.yml  _test_release.yml
libs/naver/: .gitignore  Makefile  README.md  pyproject.toml
libs/naver/langchain_naver/: chat_models.py  const.py  embeddings.py
libs/naver/langchain_naver/legacy/: __init__.py
libs/naver/tests/integration_tests/: test_chat_models.py  test_embeddings.py
libs/naver/tests/integration_tests/legacy/: test_chat_models.py  test_embeddings.py
libs/naver/tests/unit_tests/: test_chat_models.py  test_embeddings.py  test_imports.py
libs/naver/tests/unit_tests/legacy/: test_chat_models.py  test_embeddings.py
