[project]
name = "langchain-naver"
version = "0.1.0"
description = "An integration package connecting NaverCloud Clova Studio and LangChain"
authors = []
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"
readme = "README.md"
repository = "https://github.com/NaverCloudPlatform/langchain-naver"
dependencies = [
    "httpx-sse>=0.4.0",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
]

[dependency-groups]
codespell = [
    "codespell>=2.2.0,<3.0.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "setuptools>=78.1.0",
]
lint = [
    "ruff>=0.1.5,<0.2.0",
]
typing = [
    "mypy>=1.10,<1.11",
    "types-requests>=2.28.11.5,<3.0.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
