[project]
name = "langchain-naver"
version = "0.1.0rc3"
description = "An integration package connecting NaverCloud Clova Studio and LangChain"
authors = []
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"
readme = "README.md"
dependencies = [
    "httpx-sse>=0.4.0",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
]

[dependency-groups]
codespell = [
    "codespell>=2.2.0,<3.0.0",
]
test = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.1",
    "syrupy>=4.0.2",
    "pytest-watcher>=0.3.4",
]
test-integration = [
    { include-group = "test" }
]
lint = [
    "ruff>=0.1.5,<0.2.0",
]
typing = [
    "mypy>=1.10,<1.11",
    "types-requests>=2.28.11.5,<3.0.0.0",
]
dev = [
    "setuptools>=78.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
asyncio_default_fixture_loop_scope="session"
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "compile: mark placeholder test used to compile integration tests without running them",
]

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
